Bug 717129 - avoid crash in nsNNTPProtocol::Initialize by testing for m_nntpServer. r=jcranmer